---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1085_2016_XBHSM.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 39, column 3]
    │
    │ 
 39 │  	InstanceOfBHSM-PID ::= INSTANCE OF BHSM-PSID({SupportedBHSM-PSID}) ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 40 │  	SupportedBHSM-PSID BHSM-PSID ::= {bioRef,...}
    │
────╯
